--- a/shuk/css/styles.css
+++ b/shuk/css/styles.css
@@ -1,3 +1,11 @@
+@-moz-document url-prefix() {
+    img:-moz-loading {
+        visibility: hidden;
+    }
+    img:-moz-broken {
+        -moz-force-broken-image-icon: 0;
+   }
+}
 
 #autocompleter{
   margin: 0 0 0 0px;
@@ -56,6 +64,9 @@
 }
 
 
+#wrap-playlist{
+  overflow:hidden;
+}
 ul.playlist {
 	list-style: none;
 	border: none;
@@ -143,4 +154,11 @@ ul.playlist li.current input,ul.playlist li.current a{
 
 li:hover .vote-up {
 	display: block;
-}    
+}
+#controls a{
+  cursor:pointer;
+}
+#shares{
+  margin-top:20px;
+  display:none;
+}
