--- a/shuk/css/styles.css
+++ b/shuk/css/styles.css
@@ -14,6 +14,7 @@
   background:url('/img/logo.png') top left;
   margin-left:-10px;
   margin-top:13px;
+  background-repeat:no-repeat;
 }
 h3{
 	margin-top:20px;
