--- a/shuk/css/styles.css
+++ b/shuk/css/styles.css
@@ -12,8 +12,9 @@
   width:205px;
   height:52px;
   background:url('/img/logo.png') top left;
-  margin-left:-10px;
+  margin-left:0px;
   margin-top:13px;
+  margin-bottom: 20px;
   background-repeat:no-repeat;
 }
 h3{
@@ -81,7 +82,7 @@ h3{
 }
 ul.playlist {
 	list-style: none;
-	border: none;
+	border: 1px solid #DCDCDC;
 	margin: 0;
 }
 ul.playlist li {
@@ -132,7 +133,7 @@ ul.playlist li img{
 	height:18px;
 }
 
-ul.playlist li.current input,ul.playlist li.current a{
+ul.playlist li.current input{
   display: none;
 }
 ul.playlist li.current{
@@ -190,25 +191,39 @@ ul.playlist li.current{
 }
 .song{
 	overflow:auto;
-	padding-right:30px;
+	padding-right:50px;
 }
-#mylists{
-	list-style:none;
-	padding:0px;
-	margin:0px;
-	cursor:pointer;
-	
+#mylists li a{
+	color: #333 !important;
+	padding: 8px;
+	padding-left: 12px;
+	border-radius: 5px;
 }
-#mylists li{
-	padding:10px;
-	padding-left: 0px;
+#mylists li.nav-header{
+	padding-left: 12px;
 }
-#mylists li:hover{
-	font-weight: bold;
+#mylists li.active a{
+	background-color: #333;
+	color: #FFF !important;
 }
-#mylists li span.current-list{
-	font-weight:bold;
+
+#mylists li a .playlist-actions{
+	float: right;
+
 }
+#mylists li a .edit{
+	width: 14px;
+	height: 14px;
+	float: right;
+	margin-right: 5px;
+}
+#mylists li a .delete{
+	width: 14px;
+	height: 14px;
+	float: right;
+	margin-right: 5px;
+}
+
 #save-control{
 	margin-top:10px;
 	margin-bottom:20px;
@@ -217,6 +232,9 @@ ul.playlist li.current{
 #save-control a {
 	margin-top:-9px;
 	width:24%;
+}
+.save-create-buttons{
+	padding-left: 11px;
 }
 #listname{
 	width:30%;
@@ -263,14 +281,6 @@ ul.playlist li.current{
 	min-height:43px !important;
 }
 
-.item-playlist{
-	overflow:auto;
-	width:68%;
-}
-.item-playlist .playlist-actions{
-	float:right;
-
-}
 @media (max-width: 480px) {
 	.modifiers .nav li a{
 		padding-left:13px;
