--- a/shuk/css/sidebar.css
+++ b/shuk/css/sidebar.css
@@ -8,16 +8,16 @@
 	z-index: 999999;
 	background-color: #FFF;
 }
-#recentlist{
+#latestlist{
 	list-style: none;
 	padding: 5px;
 }
-#recentlist li{
+#latestlist li{
 	padding: 5px;
 	text-transform: uppercase;
 	font-size: 11px;
 }
-#recentlist li.list-header{
+#latestlist li.list-header{
 	display: block;
 	padding: 3px 10px;
 	font-size: 11px;
@@ -27,6 +27,6 @@
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 	text-transform: uppercase;
 }
-#recentlist li a{
+#latestlist li a{
 	color: #333;
 }
