--- a/shuk/css/sidebar.css
+++ b/shuk/css/sidebar.css
@@ -8,7 +8,7 @@
 	z-index: 999999;
 	background-color: #FFF;
 }
-#latestlist{
+#latestlist, #toptenlist{
 	list-style: none;
 	padding: 5px;
 }
@@ -17,7 +17,14 @@
 	text-transform: uppercase;
 	font-size: 11px;
 }
-#latestlist li.list-header{
+#toptenlist li{
+	padding: 5px;
+	text-transform: uppercase;
+	font-size: 11px;	
+	list-style: decimal;
+	list-style-position:inside;
+}
+#latestlist li.list-header, #toptenlist li.list-header{
 	display: block;
 	padding: 3px 10px;
 	font-size: 11px;
@@ -27,6 +34,6 @@
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
 	text-transform: uppercase;
 }
-#latestlist li a{
+#latestlist li a, #toptenlist li a{
 	color: #333;
 }
