--- a/shuk/css/styles.css
+++ b/shuk/css/styles.css
@@ -9,9 +9,9 @@
 .logo{
   padding:0px;
   margin:0px;
-  width:205px;
+  width:300px;
   height:52px;
-  background:url('/img/logo.png') top left;
+  background:url('/img/logo.jpg') top left;
   margin-left:0px;
   margin-top:13px;
   margin-bottom: 20px;
@@ -141,7 +141,7 @@ ul#playlist>li.current{
 }
 ul#playlist>li.current .actions{
 }
-.song .actions{
+.video_item .actions{
   width:100px;
   height: 40px;
   position:absolute;
@@ -152,7 +152,7 @@ ul#playlist>li.current .actions{
   display: none;
 }
 
-.song>ul>li{
+.video_item>ul>li{
 	display:inline-block;
 	list-style: none;
 	line-height: 1px;
@@ -160,14 +160,14 @@ ul#playlist>li.current .actions{
 	border: #ccc 1px solid;
 	border-radius: 3px;
 }
-.song>ul>li>a, .song>ul>li> .dropdown>a{
+.video_item>ul>li>a, .video_item>ul>li> .dropdown>a{
 	padding: 4px;
 	display: block;
 }
-.song>ul>li:hover{
+.video_item>ul>li:hover{
 	background-color: #DEDEDE;
 }
-.song>ul>li ul {
+.video_item>ul>li ul {
 	font-size:0.75em
 }
 .dropdown-menu li > a:hover{
@@ -178,7 +178,7 @@ ul#playlist>li.current .actions{
 }
 #search {
   position:relative;
-  background: #000 url('/img/icon-search.png') no-repeat 3.5% 13px;
+  background: #333 url('/img/icon-search.png') no-repeat 3.5% 13px;
   width:85.7%;
 }
 #search input {
@@ -230,12 +230,12 @@ ul#playlist>li.current .actions{
 #shares #share-buttons li{
 	display: inline-block;
 }
-.song{
+.video_item{
 	overflow:auto;
 	padding-right:50px;
 }
 #mylists li a{
-	color: #333 !important;
+	color:#333;
 	padding: 8px;
 	padding-left: 12px;
 	border-radius: 5px;
@@ -244,13 +244,11 @@ ul#playlist>li.current .actions{
 	padding-left: 12px;
 }
 #mylists li.active a{
-	background-color: #333;
-	color: #FFF !important;
+	background-color: #eee;
+	color: #333 !important;
 }
-
 #mylists li a .playlist-actions{
 	float: right;
-
 }
 #mylists li a .edit-button{
 	width: 14px;
@@ -277,10 +275,13 @@ ul#playlist>li.current .actions{
 .save-create-buttons{
 	padding-left: 11px;
 }
+.playlists div.save-create-buttons a {
+	color: #777 !important;
+}
 #listname{
 	width:30%;
 }
-.song img{
+.video_item img{
 	display:block;
 	width:35px;
 	height:35px;
