--- a/shuk/css/playlist.css
+++ b/shuk/css/playlist.css
@@ -11,22 +11,14 @@ ul#playlist {
   overflow-x: scroll;
   overflow-y: hidden;
   white-space:nowrap;
-	background-color: #ebebeb;
-	background-image: -moz-linear-gradient(top, #f5f5f5, #dddddd);
-	background-image: -ms-linear-gradient(top, #f5f5f5, #dddddd);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#f5f5f5), to(#dddddd));
-	background-image: -webkit-linear-gradient(top, #f5f5f5, #dddddd);
-	background-image: -o-linear-gradient(top, #f5f5f5, #dddddd);
-	background-image: linear-gradient(top, #f5f5f5, #dddddd);
-	background-repeat: repeat-x;
-	filter: progid:DXImageTransform.Microsoft.Gradient(startColorstr='#f5f5f5', endColorstr='#dddddd', GradientType=0);
+  background-color: #000;
   padding-top:5px;
   padding-bottom:10px; 
 }
 ul#playlist>li {
 	list-style: none;
 	padding: 15px;
-	color: #333;
+	color: #FFF;
 	font-size: 1.3em;
 	position: relative;
 	cursor: pointer;
@@ -34,6 +26,16 @@ ul#playlist>li {
   zoom: 1;
   *display: inline;
 	width: 200px;
+	border-top: solid 1px #3d3d3d;
+	background-color: #2c2c2c;
+	background-image: -moz-linear-gradient(top, #333333, #222222);
+	background-image: -ms-linear-gradient(top, #333333, #222222);
+	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#333333), to(#222222));
+	background-image: -webkit-linear-gradient(top, #333333, #222222);
+	background-image: -o-linear-gradient(top, #333333, #222222);
+	background-image: linear-gradient(top, #333333, #222222);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.Gradient(startColorstr='#333333', endColorstr='#222222', GradientType=0);  
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   -khtml-border-radius: 5px;
@@ -48,7 +50,7 @@ ul#playlist>li span.title{
 	font-weight: bold;
 }
 ul#playlist>li img{
-	padding:5px;
+	padding:2px;
 	background:white;
 	border:1px solid #DDD;
 }
