--- a/shuk/css/playlist.css
+++ b/shuk/css/playlist.css
@@ -3,24 +3,28 @@ ul#playlist {
   padding-bottom:10px; 
   margin-right: 10px;
 }
-.scrollwrap{
+#control-bar{
 	position: fixed;
 	bottom: 0px;
 	left: 0;
 	z-index: 1031;
 	width: 100%; 
-	height: 92px;
-	border: 1px solid #DCDCDC;
-	margin: 0;
-  white-space:nowrap;
+	height: 120px;
   background-color: #000;
+}
+#control-bar .navbar {
+	margin-bottom: 0px;
+}
+.scrollwrap{
+	width: 100%; 
+	height: 70px;
   padding-top:5px;
 	padding-left: 5px;
   overflow: hidden;		
 }
 ul#playlist>li {
 	list-style: none;
-	padding: 15px;
+	padding: 5px;
 	color: #FFF;
 	font-size: 1.3em;
 	position: relative;
@@ -28,7 +32,7 @@ ul#playlist>li {
   display: inline-block;
   zoom: 1;
   *display: inline;
-	width: 200px;
+	width: 150px;
 	border-top: solid 1px #3d3d3d;
 	background-color: #2c2c2c;
 	background-image: -moz-linear-gradient(top, #333333, #222222);
@@ -45,15 +49,16 @@ ul#playlist>li {
   border-radius: 5px;
 }
 ul#playlist>li span.title{
-	font-size: 0.7em;
+	font-size: 0.6em;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;	
 	display:block !important;
 	font-weight: bold;
+	margin-top: 10px;
 }
 ul#playlist>li img{
-	padding:2px;
+	padding:1px;
 	background:white;
 	border:1px solid #DDD;
 }
@@ -73,13 +78,12 @@ ul#playlist>li.current .actions{
 	padding-right:5px;
 }
 .video_item .actions{
-  width:85px;
+  width:45px;
   height: 30px;
   position:absolute;
-  top:35px;
+  top:0px;
   right:0px;
   overflow:visible;
-  padding-top: 9px;
   display: none;
 }
 
@@ -87,17 +91,20 @@ ul#playlist>li.current .actions{
 	display:inline-block;
 	list-style: none;
 	line-height: 1px;
-	background-color: white;
 }
 .video_item>ul>li>a, .video_item>ul>li> .dropdown>a{
-	padding: 4px;
+	padding: 0px;
 	display: block;
-}
-.video_item>ul>li:hover{
-	background-color: #DEDEDE;
 }
 .video_item>ul>li ul {
 	font-size:0.75em
+}
+.video_item img{
+	display:block;
+	width:35px;
+	height:35px;
+	float:left;
+	margin-right:15px;
 }
 .dropdown-menu li > a:hover{
 	background-color: #333;
