--- a/shuk/css/playlist.css
+++ b/shuk/css/playlist.css
@@ -1,3 +1,4 @@
+
 ul#playlist {
 	list-style: none;
   padding-bottom:10px; 
@@ -9,7 +10,7 @@ ul#playlist {
 	left: 0;
 	z-index: 1031;
 	width: 100%; 
-	height: 120px;
+	height: 44px;
   background-color: #000;
 }
 #control-bar .navbar {
@@ -21,6 +22,29 @@ ul#playlist {
   padding-top:5px;
 	padding-left: 5px;
   overflow: hidden;		
+}
+#playlists{
+	position: fixed;
+	top: 0px;
+	left: 15px;
+	border-right: 1px solid #e8e8e8;
+	padding-top:60px;
+	padding-right: 15px;
+	height: 100%;
+	-webkit-transition: all 900ms cubic-bezier(0.190, 1.000, 0.220, 1.000); 
+	   -moz-transition: all 900ms cubic-bezier(0.190, 1.000, 0.220, 1.000); 
+	    -ms-transition: all 900ms cubic-bezier(0.190, 1.000, 0.220, 1.000); 
+	     -o-transition: all 900ms cubic-bezier(0.190, 1.000, 0.220, 1.000); 
+	        transition: all 900ms cubic-bezier(0.190, 1.000, 0.220, 1.000); /* easeOutExpo */
+
+	-webkit-transition-timing-function: cubic-bezier(0.190, 1.000, 0.220, 1.000); 
+	   -moz-transition-timing-function: cubic-bezier(0.190, 1.000, 0.220, 1.000); 
+	    -ms-transition-timing-function: cubic-bezier(0.190, 1.000, 0.220, 1.000); 
+	     -o-transition-timing-function: cubic-bezier(0.190, 1.000, 0.220, 1.000); 
+	        transition-timing-function: cubic-bezier(0.190, 1.000, 0.220, 1.000); /* easeOutExpo */
+}
+#playlists.toggled {
+	left:-200px;
 }
 ul#playlist>li {
 	list-style: none;
@@ -62,7 +86,7 @@ ul#playlist>li img{
 	background:white;
 	border:1px solid #DDD;
 }
-ul#playlist>li:hover .actions{ display: block;}
+ul#playlist li:hover .actions{ display: block;}
 ul#playlist>li.current input{ display: none;}
 ul#playlist>li.current{
 	text-overflow: ellipsis;
